<resources>
    <string name="app_name">Capstone IoT</string>

    <!-- AWS -->
    <string name="Login">Login</string>
    <string name="LoginPrompt">Login with your AWS Cognito Credentials</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="SignUp">Sign Up</string>
    <string name="ConfCode">Enter Confirmation Code Here</string>
    <string name="Confirm">Confirm</string>
    <string name="Verify">Verify</string>
    <string name="NotAccount">Don\'t have account?</string>
    <string name="ForgetPass">Forget Your Password?</string>
    <string name="AgreeTerms">Agree to the Terms and Conditions</string>
    <string name="HomeMessage">Login or Signup to Connect to AWS</string>
    <string name="Connected">Your account is now connected to AWS</string>
    <string name="PublishMessage">Publish a message!</string>
    <string name="ExamplePublish">Hello World!</string>
    <string name="Publish">Publish</string>
    <string name="Connect">Connect</string>

    <!-- BLE -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="Bluetooth">Connect a BLE Device</string>
    <string name="timeout">Timeout</string>
    <string name="warning_value">"Warning \nValue"</string>
    <string name="configure_parameters">Configure your notification parameters</string>
    <string name="submit">Submit</string>


</resources>