<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connected">

    <TextView
        android:id="@+id/tvConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Connected"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvConfirmation"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:text="@string/PublishMessage"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etPublish"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="336dp"
        android:hint="@string/ExamplePublish"
        android:inputType="text" />

    <Button
        android:id="@+id/btnPublish"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/etPublish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="244dp"
        android:text="@string/Publish"
        android:textSize="20sp" />

</RelativeLayout>