<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/Buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-73dp"
        android:text="@string/HomeMessage"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/goToSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:text="@string/SignUp"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:text="@string/Login" />

    </LinearLayout>

</RelativeLayout>