<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="525dp"
    style="@style/popupStyle"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvConfigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/configure_parameters"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_settings_adjust"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/btnSubmit"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:id="@+id/llWarnLim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/warning_value"
                android:textAlignment="center" />
            <NumberPicker
                android:id="@+id/npWarningVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/timeout"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/npTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:textSize="20sp"
        style="@style/myButtonStyle"/>

</RelativeLayout>